<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/second_color"
    android:padding="20dp">
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="@drawable/login_background"
        android:elevation="10dp"
        android:padding="10dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <TextView
                android:id="@+id/tv_head"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/head"
                android:textColor="@color/first_color"
                android:textSize="20dp"
                android:paddingTop="5dp"
                android:layout_marginStart="30dp"/>
            <ImageView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:src="@drawable/cake"
                android:layout_toRightOf="@+id/tv_head"/>
        </RelativeLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_name"
                android:textSize="20dp"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_surname"
                android:textSize="20dp"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_age"
                android:textSize="20dp"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_sex"
                android:textSize="20dp"/>
        </android.support.design.widget.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <CheckBox
                android:id="@+id/ch_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textSize="15dp"
                android:layout_toRightOf="@+id/ch_other"
                android:paddingTop="5dp"/>
        </RelativeLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_other"
                android:textSize="20dp"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/button"
            android:background="@color/colorAccent"
            android:textColor="@color/white"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>